gcc/testsuite/gcc.dg/pr107805-2.c
/* { dg-do compile } */
typedef int t;
typedef struct { double a; int b; } t; /* { dg-error "conflicting types" } */
t char x; /* { dg-error "two or more data types" } */
